--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,6 @@
     <title> This is contact file </title>
   </head>
   <body>
-    Welcome to contact file 
+    Welcome to contact file. 
   </body>
 </html>
