--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title> This is index file </title>
   </head>
   <body>
-    Welcome to index file 
+    Welcome to index file.
   </body>
 </html>
