--- a/list.html
+++ b/list.html
@@ -3,6 +3,6 @@
     <title> This is list file </title>
   </head>
   <body>
-    Welcome to list file
+    Welcome to list file.
   </body>
 </html>
